@@ -2,6 +2,8 @@ libdebian-installer (0.20.repo) UNRELEASED; urgency=low
 
   * Bastian Blank
     - Remove backward compatiblity from package resolver.
+  * Thiemo Seufer
+    - Minor code cleanup in the subarchitecture check.
 
  -- Bastian Blank <waldi@debian.org>  Sun, 21 Mar 2004 20:50:53 +0100
 
